--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
