--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/flow-open-money-come/wander-map-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
