--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
-    "build": "echo 還沒寫"
+    "build": "node ./src/build.js"
   },
   "repository": {
     "type": "git",
